Changes of set up.

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = espressif32
 board = lolin32
 framework = arduino
-lib_deps = Adafruit_ST7735, Adafruit_GFX, SimpleTimer
+
+;Unused remote libraries
+;lib_deps = Adafruit_ST7735, Adafruit_GFX, SimpleTimer
