--- a/platformio.ini
+++ b/platformio.ini
@@ -12,6 +12,6 @@
 platform = espressif32
 board = lolin32
 framework = arduino
-
-;Unused remote libraries
-;lib_deps = Adafruit_ST7735, Adafruit_GFX, SimpleTimer
+check_tool = clangtidy
+check_flags =
+  clangtidy: --checks=-*,cert-*,clang-analyzer-* --fix
